# experience-trainer

./: pyproject.toml
docs/source/: conf.py
experience_trainer/: config.yaml  focal.py  main.py  trainning.py
experience_trainer/dataset/: dataset.py
experience_trainer/model/: autoencoder_actions.py  autoencoder_rewards.py  autoencoder_video.py  model.py  test.py  video_autoencoder.py
experience_trainer/models/: actor_critic_resnet.py  cross_attention_fusion.py  imitation_learning.py  imitation_learning_efficientnet.py  test.py
